# home_prototype_module_1

./: .env.example  .gitignore  DEVELOPER_DOCUMENTATION.md  INTEGRATION_STATUS.md  README.md  README_integration.md  User_Guide.docx  User_Guide.txt  deploy_and_run.sh  docker-compose.yml  home_prototype_backend.service.example  home_prototype_dashboard.service.example  install_backend_service_windows.bat  install_dashboard_service_windows.bat  install_nssm.ps1  install_unix.sh  install_windows.bat  notes.txt  post_install_check.bat  post_install_check.sh  project.config.json  protect_overwrites.bat  protect_overwrites.sh  requirements.txt  setup_all.bat  setup_all.sh  user_guild.txt
.github/: copilot-instructions.md
backend/: cache_utils.py  contracts.py  external_api.py  logs_api.py  main.py  pyproject.toml  ticket_api.py  usb_api.py
backend/modules/: access.py  ai_policy.py  audiovideo.py  automation.py  bluetooth.py  custom.py  discovery.py  energy.py  environment.py  home_assistant.py  notification.py  python_wrapper_bluetooth.py  python_wrapper_home_assistant.py  security.py  text_to_speech.py  voice_recognition.py  wellness.py
dashboard/: .eslintrc.json  AIVoicePanel.jsx  AccessibilitySettingsPanel.jsx  AdminAuditLog.jsx  AdminInvitePanel.jsx  AdminNotifications.jsx  AdminUserManager.jsx  AppointmentRequestForm.jsx  AudioConfigPanel.jsx  AuthPanel.jsx  AutomationRulesEditor.jsx  Dashboard.jsx  DeviceAlerts.jsx  Dockerfile  EmailLogPanel.jsx  EmergencyContactsEditor.jsx  FloorplanGrid.jsx  ImpersonateUserDashboardPanel.jsx  MappingEditor.jsx  MappingEnginePanel.jsx  NotificationSettingsPanel.jsx  OnboardingModal.jsx  PrivacySettingsPanel.jsx  RemoteSupportAdminPanel.jsx  RoomManager.jsx  SEO.jsx  SecuritySettingsPanel.jsx  SupportTickets.jsx  ThirdPartyDevicesPanel.jsx  ZigbeeRouters.jsx  encryption.js  index.html  main.jsx  package-lock.json  package.json  sitemap.xml  useUserStatusColor.js  vite.config.js
dev_reference/: api_guide.txt  feature_list.txt  notes.txt  user_guide.txt
frontend/: ai.config.json  auth.html  auth.js  contracts.ts  dashboard-download.html  dashboard-setup-tutorial.html  dashboard.css  dashboard.html  dashboard.js  download.html  emergency.html  emergency.js  index.html  onboarding.html  package.json  signup.css  signup.html  signup.js  store.css  store.html  store.js  style.css  (+3 more)
rust_smart_bulbs/: Cargo.toml  Dockerfile  device_contracts.rs  lib.rs  main.rs  pyproject.toml  requirements.txt
rust_smart_bulbs/src/: device_contracts.rs  lib.rs  main.rs
(+161 files in other folders)
