
[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for membership site"
authors = ["Your Name <you@example.com>"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

speechrecognition = "^3.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
